k8s/linkerd/authz-policy.yaml
apiVersion: policy.linkerd.io/v1beta1
kind: HTTPRoute
metadata:
  name: api-route
  namespace: services
spec:
  parentRefs:
  - name: api-server
    kind: Server
    group: policy.linkerd.io
  rules:
  - matches:
    - path:
      type: PathPrefix
      value: /api
    timeouts:
      request: 10s
    retry:
      attempts: 3
      backoff:
        initialDelay: 3
        backoff:
          initialDelay: 100ms
          maxDelay: 1s
